--- a/public/login.html
+++ b/public/login.html
@@ -59,7 +59,7 @@
   <body style="text-align: center">
     <header id="navbar">
       <nav class="nav-wrapper container">
-        <a href="index.html" class="home-link">
+        <a href="recs.html" class="home-link">
           <img id="logo" src="assets/logo.png" />
           nextwatch
         </a>
