--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
 <body>
   <header id="navbar">
     <nav class="nav-wrapper container">
-      <a href="index.html" class="home-link">
+      <a href="recs.html" class="home-link">
         <img id="logo" src="assets/logo.png">
         nextwatch
       </a>
