--- a/public/register.html
+++ b/public/register.html
@@ -56,7 +56,7 @@
   <body style="text-align: center">
     <header id="navbar">
       <nav class="nav-wrapper container">
-        <a href="index.html" class="home-link">
+        <a href="recs.html" class="home-link">
           <img id="logo" src="assets/logo.png">
           nextwatch
         </a>
@@ -70,8 +70,7 @@
         <div class="nav-menu">
           <ul class="nav-links">
             <li class="nav-item"><a class="nav-link" href="recs.html">Recommendations</a></li>
-            <li class="nav-item"><a class="nav-link" href="home.html">My Watchlist</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Profile</a></li>
+            <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
           </ul>
         </div>
       </nav>
